test/tests/stages/5_local_variables/valid/assignment_lowest_precedence.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  ;
  identifier(a)
  =
  const int(0)
  ||
  const int(5)
  ;
  return
  identifier(a)
  ;
  }
