test/tests/stages/5_local_variables/invalid_parse/malformed_increment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  identifier(a)
  +
  +
  ;
  return
  identifier(a)
  ;
  }
